styling and functionality updates

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,15 @@
         <div id="mainContent">
             <div id="familyTree" class="ifAuth--show"></div>
             <div id="detailsPanel" class="ifAuth--show">
-                <div class="detailsPanel__actions">
-                    <button class="iconButton" data-modal-trigger="invite-member_modal"><i class="fa fa-envelope"></i></button>
-                    <button class="iconButton details__button--close"><i class="fa fa-arrow-right"></i></button>
+                <div class="detailsPanel__actions u-mar-b_4">
+                    <button class="iconButton" data-modal-trigger="invite-member_modal"><i class="fa fa-plus"></i></button>
+                    <button class="iconButton secondary details__button--close u-mar-l_auto"><i class="fa fa-arrow-right"></i></button>
                 </div>
                 <div class="detailsPanel__information">
-                    
+                    <img class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3" src="" alt="">
+                    <div class="detailsPanel__firstName u-mar-lr_auto header_m u-ta_center u-mar-b_5"></div>
+                    <h6 class="u-mar-b_4">Details</h6>
+                    <div class="detailsPanel__metaData"></div>
                 </div>
             </div>
         </div>
