--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,14 @@
 </head>
     <body>
         <nav>
-            <h1>Mily</h1>
+            <h1>MILY</h1>
             <button id="sign-up_button" class="ifAuth--hide">Log in</button>
             <button class="ifAuth--hide">Sign up</button>
             <button id="sign-out_button" class="ifAuth--show u-mar-l_auto white">Sign out</button>
-            <ul id="treeMenu" class="ifAuth--show u-mar-lr_auto"></ul>
+            <div id="treeMenu" class="ifAuth--show u-mar-lr_auto">
+                <div id="treeMenu__currentTree"></div>
+                <div id="treeMenu__options"></div>
+            </div>
         </nav>
         <form id="sign-in_form" class="ifAuth--hide">
             <input type="email" name="sign-in_email" placeholder="Email">
@@ -28,7 +31,14 @@
             <div id="detailsPanel">
                 <div class="detailsPanel__actions u-mar-b_4">
                     <button class="iconButton" data-modal-trigger="invite-member_modal"><i class="fa fa-plus"></i></button>
-                    <button class="iconButton secondary details__button--close u-mar-l_auto"><i class="fa fa-arrow-right"></i></button>
+                    <button class="iconButton secondary u-mar-l_auto"><i class="fa fa-ellipsis-h"></i></button>
+                    <button class="iconButton secondary details__button--close u-mar-l_2"><i class="fa fa-arrow-right"></i></button>
+                </div>
+                <div class="dropdown">
+                    <button id="add-child-action">Add child</button>
+                    <button id="add-parent-action">Parent</button>
+                    <button id="add-spouse-action">Spouse</button>
+                    <button id="add-sibling-action">Sibling</button>
                 </div>
                 <div class="detailsPanel__information">
                     <img class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3" src="" alt="">
