styling and logic updates

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                     <button class="iconButton" data-dropdown-target="add-relationship-dropdown"><i class="fa fa-plus"></i></button>
                     <!-- <button class="iconButton" data-dropdown-target="add-relationship-dropdown" data-modal-trigger="invite-member_modal"><i class="fa fa-plus"></i></button> -->
                     <button class="iconButton secondary u-mar-l_auto" data-dropdown-target="member-options-dropdown"><i class="fa fa-ellipsis-h"></i></button>
-                    <button class="iconButton secondary details__button--close u-mar-l_2"><i class="fa fa-arrow-right"></i></button>
+                    <button class="iconButton secondary details__button--close u-mar-l_2"><i class="fa fa-times"></i></button>
                 </nav>
                 <ul id="member-options-dropdown" class="dropdown u-d_none u-p_fixed">
                     <li id="edit-member-action" class="dropdown__item">Edit member details</li>
