--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,22 @@
                 <button id="sign-up_button" class="ifAuth--hide">Log in</button>
                 <button class="ifAuth--hide">Sign up</button>
             </div>
-            <button id="notification_indicator" data-dropdown-target="notification_menu" class="ifAuth--show u-mar-l_auto iconButton u-d_none"><i class="fa fa-bell"></i></button>
+            <button id="notification_indicator" data-dropdown-target="notification_menu" class="u-mar-l_auto iconButton u-d_none"><i class="fa fa-bell"></i></button>
             <div id="notification_menu" class="dropdown u-p_absolute">
             </div>
 
+            <button class="u-mar-l_2 u-mar-r_1 iconButton"><i class="fa fa-search"></i></button>
             <button class="ifAuth--show u-mar-l_2 u-mar-r_2 iconButton" data-dropdown-target="view-preferences"><i class="fa fa-eye"></i></button>
             <div id="view-preferences" class="dropdown u-d_none u-p_absolute">
                 <div id="view-preferences_tree" class="dropdown__item">Tree</div>
                 <div id="view-preferences_list" class="dropdown__item">List</div>
             </div>
-            <button id="sign-out_button" class="ifAuth--show u-mar-l_2 white">Sign out</button>
+            <div id="accountMenu" class="ifAuth--show u-mar-l_1" data-dropdown-target="accountMenu__dropdown"></div>
+            <div id="accountMenu__dropdown" class="dropdown u-p_absolute">
+                <div class="dropdown__item">View profile</div>
+                <div id="sign-out_button" class=" dropdown__item">Sign out</div>
+            </div>
+
             <div id="treeMenu" class="ifAuth--show u-mar-lr_auto u-c_white">
                 <div id="treeMenu__currentTree" data-dropdown-target="treeMenu__options"></div>
                 <ul id="treeMenu__options" class="dropdown u-p_absolute u-d_none"></div>
@@ -52,7 +58,26 @@
             </div>
         </form>
 
-
+        <form id="sign-up_form" class="ifAuth--hide card u-mar-lr_auto">
+            <div class="card__header u-pad_0">
+                <img src="/assets/img/wavy-sm--yellow.svg" alt="decoration">
+            </div>
+            <div class="card__content">
+                <div class="inputGroup">
+                    <label for="sign_up_email">Email</label>
+                    <input type="email" name="sign-up_email" placeholder="Email">
+                </div>
+                <div class="inputGroup">
+                    <label for="sign-up_password">Password</label>
+                    <input type="password" name="sign-up_password" placeholder="Password">
+                    <p class="message"></p>
+                </div>
+                <p class="error"></p>
+            </div>
+            <div class="card__footer">
+                <button class="u-w_full">Sign up</button>
+            </div>
+        </form>
 
         <form id="create-tree_form" class="card u-mar-lr_auto u-d_none">
             <div class="card__header">
@@ -72,9 +97,9 @@
             <section id="familyTree" class="ifAuth--show"></section>
             <aside id="detailsPanel">
                 <nav class="detailsPanel__actions u-mar-b_4">
-                    <button class="iconButton" data-dropdown-target="add-relationship-dropdown"><i class="fa fa-plus"></i></button>
+                    <button class="iconButton add-relationship_button" data-dropdown-target="add-relationship-dropdown"><i class="fa fa-plus"></i></button>
                     <div class="detailsPanel__actions-secondary u-mar-l_auto u-d_flex">
-                        <button class="iconButton secondary " id="invite-member-action" data-modal-trigger="invite-member_modal"><i class="fa fa-envelope"></i></button>
+                        <button class="iconButton secondary" id="invite-member-action" data-modal-trigger="invite-member_modal"><i class="fa fa-envelope"></i></button>
                         <button class="iconButton secondary u-mar-l_2" data-dropdown-target="member-options-dropdown"><i class="fa fa-ellipsis-h"></i></button>
                         <button class="iconButton secondary details__button--close u-mar-l_2"><i class="fa fa-times"></i></button> 
                     </div>
@@ -114,6 +139,7 @@
                     <div class="inputGroup">
                         <label for="invite-member_email">Email address</label>
                         <input type="text" name="invite-member_email">
+                        <p class="error"></p>
                         <div class="inputGroup inputGroup__horizontal u-mar-t_2">
                             <input type="radio" class="u-mar-r_2" name="invite-member_permission" value="admin">
                             <label for="permission">Admin</label>
@@ -148,7 +174,7 @@
                         <label for="edit-tree_name">Family name</label>
                         <input type="text" name="edit-tree_name">
                         <input type="text" name="edit-tree_id" class="u-d_none">
-                        <h3 class="u-mar-t_4">Members</h3>
+                        <h6 class="u-mar-t_4">Members</h6>
                         <div id="edit-tree_permissions" class="u-mar-b_2">
 
                         </div>
@@ -156,9 +182,9 @@
                 </div>
                 <div class="card__footer">
                     <div class="buttonGroup u-jc_flex-end">
-                        <a href="#" id="delete-tree" class="modal_button--close button danger">Delete</a>
-                        <a href="#" class="modal_button--close button secondary">Cancel</a>
-                        <button type="submit">Save changes</button>
+                        <a href="#" id="delete-tree" class="modal_button--close button danger edit-tree_delete">Delete</a>
+                        <a href="#" class="modal_button--close button secondary">Close</a>
+                        <button class="edit-tree_save" type="submit">Save changes</button>
                     </div>
                 </div>
                 <a href="#" class="modal_button--close iconButton white"><i class="fa fa-times"></i></a>
